force-app/main/default/objects/EcomailSetting__mdt/EcomailSetting__mdt.object-meta.xml
<CustomObject>
    <label>Ecomail Setting</label>
    <pluralLabel>Ecomail Settings</pluralLabel>
</CustomObject>