force-app/main/default/objects/EcomailSetting__mdt/fields/APIKey__c.field-meta.xml
<CustomField>
    <fullName>APIKey__c</fullName>
    <label>API Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>