force-app/main/default/objects/EcomailSetting__mdt/fields/EcomailListId__c.field-meta.xml
<CustomField>
    <fullName>EcomailListId__c</fullName>
    <description>For sync contacts from Ecomail to leads</description>
    <label>Ecomail List Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>