force-app/main/default/objects/EcomailSetting__mdt/fields/EcomailListIdContacts__c.field-meta.xml
<CustomField>
    <fullName>EcomailListIdContacts__c</fullName>
    <description>Id of ecomail subsriber list where contacts will be importing</description>
    <label>Ecomail List Id Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>