force-app/main/default/objects/EcomailSetting__mdt/fields/EcomailListIdLeads__c.field-meta.xml
<CustomField>
    <fullName>EcomailListIdLeads__c</fullName>
    <label>Ecomail List Id Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>