force-app/main/default/objects/EcomailSetting__mdt/fields/FromEmail__c.field-meta.xml
<CustomField>
    <fullName>FromEmail__c</fullName>
    <label>From Email</label>
    <type>Email</type>
</CustomField>