force-app/main/default/objects/EcomailSetting__mdt/fields/FromName__c.field-meta.xml
<CustomField>
    <fullName>FromName__c</fullName>
    <label>From Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>