force-app/main/default/objects/EcomailSetting__mdt/fields/ReplyToEmail__c.field-meta.xml
<CustomField>
    <fullName>ReplyToEmail__c</fullName>
    <label>Reply To Email</label>
    <type>Email</type>
</CustomField>