force-app/main/default/objects/EcomailSetting__mdt/fields/SyncCampaigns__c.field-meta.xml
<CustomField>
    <fullName>SyncCampaigns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Campaigns</label>
    <type>Checkbox</type>
</CustomField>