force-app/main/default/objects/EcomailSetting__mdt/fields/SyncContacts__c.field-meta.xml
<CustomField>
    <fullName>SyncContacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync contacts</label>
    <type>Checkbox</type>
</CustomField>