force-app/main/default/objects/EcomailSetting__mdt/fields/SyncLeads__c.field-meta.xml
<CustomField>
    <fullName>SyncLeads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Leads</label>
    <type>Checkbox</type>
</CustomField>